--- a/_posts/2014-3-20-greedy.md
+++ b/_posts/2014-3-20-greedy.md
@@ -24,3 +24,12 @@ Si suponemos que $S$ es no vacío y **convexo**, si `$x_0$` es un óptimo local,
 Un grafo es un par compuesto por un conjunto de vértices finito y no vacío y uno de aristas, relacionando vértices dos a dos. Pueden ser dirigidos o no dirigidos, y pueden estar ponderados.
 
 Los grafos abstraen situaciones del mundo real para resolver problemas de búsqueda de recorridos eficientes (TSP, ...), diseño de redes, etc.
+
+#### Euler
+camino euleriano
+ : camino que pasa a través de cada arista una y solo una vez
+
+circuito euleriano
+ : circuito que pasa por cada arista del grafo una y solo una vez
+
+**Teorema de Euler**: Si todos los vértices de un grafo son de grado impar, entonces no existen circuitos eulerianos. Si un grafo es conexo y todos sus vértices son de grado par, existe al menos un circuito euleriano.
