--- a/_posts/2014-3-20-greedy.md
+++ b/_posts/2014-3-20-greedy.md
@@ -25,7 +25,7 @@ Un grafo es un par compuesto por un conjunto de vértices finito y no vacío y u
 
 Los grafos abstraen situaciones del mundo real para resolver problemas de búsqueda de recorridos eficientes (TSP, ...), diseño de redes, etc.
 
-#### Euler
+#### Caminos y circuitos
 camino euleriano
  : camino que pasa a través de cada arista una y solo una vez
 
@@ -33,3 +33,25 @@ circuito euleriano
  : circuito que pasa por cada arista del grafo una y solo una vez
 
 **Teorema de Euler**: Si todos los vértices de un grafo son de grado impar, entonces no existen circuitos eulerianos. Si un grafo es conexo y todos sus vértices son de grado par, existe al menos un circuito euleriano.
+
+circuito hamiltoniano
+ : circuito que pasa por cada vértice una y solo una vez
+
+No hay un resultado que nos garantice la existencia de circuitos hamiltonianos.
+
+#### Árbol generador minimal
+árbol
+ : grafo conexo y sin circuitos
+
+árbol generador de un grafo
+ : Dado $G = (V, E)$, $T = (V, F)$ con $F \subseteq E$ es generador del grafo si tiene los mismos vértices y tiene $|V| - 1$ aristas.
+
+árbol generador minimal
+ : árbol generador de G en el que la suma de los pesos de sus arcos sea mínima
+
+**Teorema de Cayley**: Hay $n^{n-2}$ árboles generadores de `$K_n$` (grafo completo de $n$ vértices).
+
+matriz de adyacencia
+ : para el grafo no dirigido $(V, E)$, `$a_{ij} = 1\ si\ (x_i, x_j) \in E,\ 0\ si\ (x_i,x_j) \notin E$`
+
+En los grafos dirigidos, además, el `$a_{ij}$` tendrá el signo que corresponda según $x_i$ sea el inicial o el final.
